force-app/main/default/objects/Event_Web_Logo__c/Event_Web_Logo__c.object-meta.xml
<CustomObject>
    <label>Event Web Logo</label>
    <nameField>
        <label>Account Display Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Web Logos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>