force-app/main/default/objects/Event_Web_Logo__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipLabel>Event Web Logos</relationshipLabel>
    <relationshipName>Event_Web_Logos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>