force-app/main/default/objects/Event_Web_Logo__c/fields/Logo_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_Image_URL__c</fullName>
    <label>Logo Image URL</label>
    <type>Url</type>
</CustomField>