force-app/main/default/objects/Event_Web_Logo__c/fields/Sponsorship_Level__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Level__c</fullName>
    <label>Sponsorship Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anchor</fullName>
            </value>
            <value>
                <fullName>Exhibitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>